--- a/.gitignore
+++ b/.gitignore
@@ -60,22 +60,6 @@
 ehthumbs.db
 Thumbs.db
 
-# Logs and databases #
-######################
-*.log
-*.sql
-*.sqlite
-
-# OS generated files #
-######################
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
 # Especific files #
 ###################
 *test.py
@@ -84,3 +68,5 @@ Thumbs.db
 *.fits
 Tests/*
 *.jpg
+*.xml
+
