--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
-matplotlib
-numpy
-scipy
-astropy 
-photutils
-regions
-astroquery
-lmfit
-termcolor
-opencv-python
+astroalign==2.4.1
+astropy==5.1
+astroquery==0.4.6
+fabada==0.1
+lmfit==1.0.3
+matplotlib==3.4.3
+numpy==1.21.2
+opencv_python==4.6.0.66
+pandas==1.3.3
+photutils==1.5.0
+regions==0.6
+scikit_learn==1.1.2
+scipy==1.7.1
+screeninfo==0.8.1
+setuptools==68.1.2
+termcolor==1.1.0
+wget==3.2
